--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-rekognition": "^3.332.0",
     "@aws-sdk/client-s3": "^3.332.0",
+    "@aws-sdk/signature-v4-crt": "^3.329.0",
     "@types/node": "20.1.3",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "mongoose": "^7.1.1",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
